--- a/argocd/apps/traefik.yaml
+++ b/argocd/apps/traefik.yaml
@@ -19,7 +19,7 @@ spec:
           persistence:
             enabled: true
             storageClass: longhorn
-            size: 128Mi
+            size: 1Gi
           providers:
             kubernetesCRD:
               enabled: true
