--- a/argocd/apps/traefik.yaml
+++ b/argocd/apps/traefik.yaml
@@ -20,6 +20,7 @@ spec:
             enabled: true
             storageClass: longhorn
             size: 1Gi
+            accessMode: ReadWriteMany
           providers:
             kubernetesCRD:
               enabled: true
