--- a/argocd/apps/traefik.yaml
+++ b/argocd/apps/traefik.yaml
@@ -18,7 +18,7 @@ spec:
               enabled: true
           persistence:
             enabled: true
-            storageClass: longhorn
+            storageClass: longhorn-rwx
             size: 1Gi
             accessModes:
               - ReadWriteMany
