--- a/argocd/apps/traefik.yaml
+++ b/argocd/apps/traefik.yaml
@@ -1,42 +1,39 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: traefik
-  namespace: argocd
+  namespace: default
 spec:
-  project: default
-  sources:
-    - chart: traefik
-      repoURL: https://traefik.github.io/charts
-      targetRevision: 25.0.0
-      helm:
-        values: |
-          deployment:
-            replicas: 2
-          ingressRoute:
-            dashboard:
-              enabled: true
-          persistence:
-            enabled: true
-            storageClass: longhorn-rwx
-            size: 1Gi
-            accessModes:
-              - ReadWriteMany
-          providers:
-            kubernetesCRD:
-              enabled: true
-            kubernetesIngress:
-              enabled: true
+  replicas: 2
+  selector:
+    matchLabels:
+      app: traefik
+  template:
+    metadata:
+      labels:
+        app: traefik
+    spec:
+      serviceAccountName: traefik-account # Make sure this service account exists
+      containers:
+        - name: traefik
+          image: traefik:v2.10
+          args:
+            - --api.insecure=true
+            - --providers.kubernetesingress
+            - --providers.kubernetescrd
+            - --entrypoints.web.address=:80
+            - --entrypoints.websecure.address=:443
           ports:
-            web:
-              redirectTo:
-                port: websecure
-            websecure:
-              tls:
-                enabled: true
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: traefik
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
+            - name: web
+              containerPort: 80
+            - name: websecure
+              containerPort: 443
+            - name: admin
+              containerPort: 8080
+          volumeMounts:
+            - name: traefik-persistent-storage
+              mountPath: /data
+      volumes:
+        - name: traefik-persistent-storage
+          persistentVolumeClaim:
+            claimName: traefik-data
