--- a/argocd/infra/infrastructure.yaml
+++ b/argocd/infra/infrastructure.yaml
@@ -8,7 +8,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/jsmithgh/argocd.git
-    path: infra/apps
+    path: argocd/infra/apps
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
