--- a/argocd/infra/apps/longhorn.yaml
+++ b/argocd/infra/apps/longhorn.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: 1.8.0
     helm:
       valueFiles:
-        - ./longhorn-values.yaml
+        - longhorn-values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: longhorn-system
