--- a/argocd/infra/apps/longhorn.yaml
+++ b/argocd/infra/apps/longhorn.yaml
@@ -18,12 +18,15 @@ spec:
           createDefaultDiskLabeledNodes: true
           defaultDataPath: /var/lib/longhorn/
           defaultReplicaCount: 3
+      skipCrds: false
+    syncPolicy:
+      syncOptions:
+        - CreateNamespace=true
+        - SkipDryRunOnMissingResource=true
+        - Replace=true
+      automated:
+        prune: true
+        selfHeal: true
   destination:
     server: https://kubernetes.default.svc
     namespace: longhorn-system
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
-    automated:
-      prune: true
-      selfHeal: true
