--- a/argocd/infra/apps/longhorn.yaml
+++ b/argocd/infra/apps/longhorn.yaml
@@ -1,21 +1,23 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: longhorn
-  namespace: argocd
+  namespace: longhorn
 spec:
-  project: default
-  source:
-    chart: longhorn
-    repoURL: https://charts.longhorn.io
-    targetRevision: 1.8.0
-    helm:
-      values: |
-        persistence:
-          defaultClass: true
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: longhorn-system
+  type: LoadBalancer
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
+  project: default
+  sources:
+    - chart: longhorn
+      repoURL: https://charts.longhorn.io/
+      targetRevision: v1.8.0 # Replace with the Longhorn version you'd like to install or upgrade to
+      helm:
+        values: |
+          preUpgradeChecker:
+            jobEnabled: false
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: longhorn-system
