--- a/argocd/applications/apps/traefik.yaml
+++ b/argocd/applications/apps/traefik.yaml
@@ -1,32 +1,51 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Application
 metadata:
   name: traefik
-  namespace: traefik
+  namespace: argocd
 spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: traefik
-  template:
-    metadata:
-      labels:
-        app: traefik
-    spec:
-      serviceAccountName: traefik-account # Make sure this service account exists
-      containers:
-        - name: traefik
-          image: traefik:v2.10
-          args:
-            - --api.insecure=true
-            - --providers.kubernetesingress
-            - --providers.kubernetescrd
-            - --entrypoints.web.address=:80
-            - --entrypoints.websecure.address=:443
-          ports:
-            - name: web
-              containerPort: 80
-            - name: websecure
-              containerPort: 443
-            - name: admin
-              containerPort: 8080
+  project: default
+  source:
+    chart: traefik
+    repoURL: https://traefik.github.io/charts
+    targetRevision: v25.0.0
+    helm:
+      values: |
+        deployment:
+          enabled: true
+          replicas: 3  # For high availability across control plane nodes
+        service:
+          type: NodePort
+        ports:
+          web:
+            nodePort: 32080  # HTTP port
+          websecure:
+            nodePort: 32443  # HTTPS port
+        ingressRoute:
+          dashboard:
+            enabled: true
+        affinity:
+          podAntiAffinity:
+            preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                  - key: app.kubernetes.io/name
+                    operator: In
+                    values:
+                    - traefik
+                topologyKey: kubernetes.io/hostname
+        tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: traefik-system
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+    automated:
+      prune: true
+      selfHeal: true
