added commented out self healing options to remove later

--- a/argocd/infra/apps/longhorn.yaml
+++ b/argocd/infra/apps/longhorn.yaml
@@ -6,9 +6,6 @@ metadata:
   namespace: argocd
 spec:
   type: LoadBalancer
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
   project: default
   sources:
     - chart: longhorn
@@ -21,3 +18,9 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: longhorn-system
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+    #automated:
+    #  prune: true
+    #  selfHeal: true
