--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -7,12 +7,10 @@ spec:
   project: default
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 55.0.0
+    targetRevision: 68.3.2
     chart: kube-prometheus-stack
     helm:
       values: |
-        crds:
-          create: false
 
         grafana:
           persistence:
@@ -100,4 +98,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - SkipCRDs=true
+      - ServerSideApply=true
