values to valuefiles in monitoring.yaml

--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: 68.3.2
     chart: kube-prometheus-stack
     helm:
-      values:
+      valueFiles:
         - "$values/values/grafana.yaml"
         - "$values/values/prometheus.yaml"
         - "$values/values/alertmanager.yaml"
