--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -64,18 +64,20 @@ spec:
                     requests:
                       storage: 10Gi
                   volumeName: synology-nfs-pv
-                  volumeMounts:
-                    - mountPath: /alertmanager
-                      subPath: alertmanager
+            # volumeMounts moved here, directly under alertmanagerSpec
+            volumeMounts:
+              - name: storage-volume # Added name field
+                mountPath: /alertmanager
+                subPath: alertmanager
             affinity:
               nodeAffinity:
                 requiredDuringSchedulingIgnoredDuringExecution:
                   nodeSelectorTerms:
-                  - matchExpressions:
-                    - key: workload-type/monitoring
-                      operator: In
-                      values:
-                      - "true"
+                    - matchExpressions:
+                        - key: workload-type/monitoring
+                          operator: In
+                          values:
+                            - "true"
 
         prometheusOperator:
           admissionWebhooks:
@@ -86,11 +88,11 @@ spec:
             nodeAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
                 nodeSelectorTerms:
-                - matchExpressions:
-                  - key: workload-type/monitoring
-                    operator: In
-                    values:
-                    - "true"
+                  - matchExpressions:
+                      - key: workload-type/monitoring
+                        operator: In
+                        values:
+                          - "true"
 
   destination:
     server: https://kubernetes.default.svc
