--- a/argocd/infra/apps/monitoring-crds.yaml
+++ b/argocd/infra/apps/monitoring-crds.yaml
@@ -3,27 +3,26 @@ kind: Application
 metadata:
   name: kube-prometheus-stack-crds
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://github.com/prometheus-community/helm-charts.git
-    targetRevision: HEAD
-    path: charts/kube-prometheus-stack/crds/
+    repoURL: https://github.com/prometheus-operator/prometheus-operator.git
+    targetRevision: v0.80.0 # Make sure this matches your installed version
+    path: example/prometheus-operator-crd
     directory:
       recurse: true
-      jsonnet: {}
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
   syncPolicy:
-    automated:
-      prune: true
     syncOptions:
+      - Replace=false # Important: Don't replace existing CRDs initially
       - CreateNamespace=true
-      - Replace=true
-      - PruneLast=true
-      - PrunePropagationPolicy=foreground
       - RespectIgnoreDifferences=true
+    automated:
+      prune: false # Important: Don't prune existing resources initially
   ignoreDifferences:
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
