--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -18,87 +18,86 @@ spec:
       jsonPointers:
         - /metadata/annotations
       values: |
-        grafana:
-          persistence:
-            enabled: true
+  grafana:
+    persistence:
+      enabled: true
+      storageClassName: synology-nfs
+      size: 10Gi
+      subPath: grafana
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: workload-type/monitoring
+                  operator: In
+                  values:
+                    - "true"
+
+  prometheus:
+    prometheusSpec:
+      storage:
+        volumeClaimTemplate:
+          spec:
             storageClassName: synology-nfs
-            size: 10Gi
-            subPath: grafana
-          affinity:
-            nodeAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                nodeSelectorTerms:
-                  - matchExpressions:
-                    - key: workload-type/monitoring
-                      operator: In
-                      values:
+            accessModes: ["ReadWriteMany"]
+            resources:
+              requests:
+                storage: 80Gi
+            volumeName: synology-nfs-pv
+      volumeMounts:
+        - mountPath: /prometheus
+          subPath: prometheus
+      retention: 30d
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: workload-type/monitoring
+                    operator: In
+                    values:
                       - "true"
 
-        prometheus:
-          prometheusSpec:
-            storage:
-              volumeClaimTemplate:
-                spec:
-                  storageClassName: synology-nfs
-                  accessModes: ["ReadWriteMany"]
-                  resources:
-                    requests:
-                      storage: 80Gi
-                  volumeName: synology-nfs-pv
-                  volumeMounts:
-                    - mountPath: /prometheus
-                      subPath: prometheus
-            retention: 30d
-            affinity:
-              nodeAffinity:
-                requiredDuringSchedulingIgnoredDuringExecution:
-                  nodeSelectorTerms:
-                  - matchExpressions:
-                    - key: workload-type/monitoring
-                      operator: In
-                      values:
+  alertmanager:
+    alertmanagerSpec:
+      storage:
+        volumeClaimTemplate:
+          spec:
+            storageClassName: synology-nfs
+            accessModes: ["ReadWriteMany"]
+            resources:
+              requests:
+                storage: 10Gi
+            volumeName: synology-nfs-pv
+      volumeMounts:
+        - name: storage-volume
+          mountPath: /alertmanager
+          subPath: alertmanager
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: workload-type/monitoring
+                    operator: In
+                    values:
                       - "true"
 
-        alertmanager:
-          alertmanagerSpec:
-            storage:
-              volumeClaimTemplate:
-                spec:
-                  storageClassName: synology-nfs
-                  accessModes: ["ReadWriteMany"]
-                  resources:
-                    requests:
-                      storage: 10Gi
-                  volumeName: synology-nfs-pv
-            # volumeMounts moved here, directly under alertmanagerSpec
-            volumeMounts:
-              - name: storage-volume # Added name field
-                mountPath: /alertmanager
-                subPath: alertmanager
-            affinity:
-              nodeAffinity:
-                requiredDuringSchedulingIgnoredDuringExecution:
-                  nodeSelectorTerms:
-                    - matchExpressions:
-                        - key: workload-type/monitoring
-                          operator: In
-                          values:
-                            - "true"
-
-        prometheusOperator:
-          admissionWebhooks:
-            enabled: true
-          tlsProxy:
-            enabled: true
-          affinity:
-            nodeAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                nodeSelectorTerms:
-                  - matchExpressions:
-                      - key: workload-type/monitoring
-                        operator: In
-                        values:
-                          - "true"
+  prometheusOperator:
+    admissionWebhooks:
+      enabled: true
+    tlsProxy:
+      enabled: true
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: workload-type/monitoring
+                  operator: In
+                  values:
+                    - "true"
 
   destination:
     server: https://kubernetes.default.svc
