--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -12,98 +11,111 @@ spec:
     chart: kube-prometheus-stack
     helm:
       skipCrds: true
-  ignoreDifferences:
-    - group: apiextensions.k8s.io
-      kind: CustomResourceDefinition
-      jsonPointers:
-        - /metadata/annotations
-      values: |
-  grafana:
-    persistence:
-      enabled: true
-      storageClassName: synology-nfs
-      size: 10Gi
-      subPath: grafana
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: workload-type/monitoring
-                  operator: In
-                  values:
-                    - "true"
-    service:
-      enabled: true
-      type: LoadBalancer
-
-  prometheus:
-    prometheusSpec:
-      storage:
-        volumeClaimTemplate:
-          spec:
+      values:
+        grafana:
+          persistence:
+            enabled: true
             storageClassName: synology-nfs
-            accessModes: ["ReadWriteMany"]
-            resources:
-              requests:
-                storage: 80Gi
-            volumeName: synology-nfs-pv
-      volumeMounts:
-        - mountPath: /prometheus
-          subPath: prometheus
-      retention: 30d
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-              - matchExpressions:
-                  - key: workload-type/monitoring
-                    operator: In
-                    values:
-                      - "true"
-      service:
-        enabled: true
-        type: LoadBalancer
+            size: 10Gi
+            subPath: grafana
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: workload-type/monitoring
+                        operator: In
+                        values:
+                          - "true"
+          ingress:
+            enabled: true
+            ingressClassName: traefik
+            annotations:
+              cert-manager.io/cluster-issuer: "letsencrypt-staging"
+              traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
+            hosts:
+              - grafana.gitopsguy.com
+            tls:
+              - secretName: grafana-tls
+                hosts:
+                  - grafana.gitopsguy.com
 
-  alertmanager:
-    alertmanagerSpec:
-      storage:
-        volumeClaimTemplate:
-          spec:
-            storageClassName: synology-nfs
-            accessModes: ["ReadWriteMany"]
-            resources:
-              requests:
-                storage: 10Gi
-            volumeName: synology-nfs-pv
-      volumeMounts:
-        - name: storage-volume
-          mountPath: /alertmanager
-          subPath: alertmanager
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-              - matchExpressions:
-                  - key: workload-type/monitoring
-                    operator: In
-                    values:
-                      - "true"
+        prometheus:
+          prometheusSpec:
+            storage:
+              volumeClaimTemplate:
+                spec:
+                  storageClassName: synology-nfs
+                  accessModes: ["ReadWriteMany"]
+                  resources:
+                    requests:
+                      storage: 80Gi
+                  volumeName: synology-nfs-pv
+            volumeMounts:
+              - mountPath: /prometheus
+                subPath: prometheus
+            retention: 30d
+            affinity:
+              nodeAffinity:
+                requiredDuringSchedulingIgnoredDuringExecution:
+                  nodeSelectorTerms:
+                    - matchExpressions:
+                        - key: workload-type/monitoring
+                          operator: In
+                          values:
+                            - "true"
+          ingress:
+            enabled: true
+            ingressClassName: traefik
+            annotations:
+              cert-manager.io/cluster-issuer: "letsencrypt-staging"
+              traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
+            hosts:
+              - prometheus.gitopsguy.com
+            tls:
+              - secretName: prometheus-tls
+                hosts:
+                  - prometheus.gitopsguy.com
 
-  prometheusOperator:
-    admissionWebhooks:
-      enabled: true
-    tlsProxy:
-      enabled: true
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: workload-type/monitoring
-                  operator: In
-                  values:
-                    - "true"
+        alertmanager:
+          alertmanagerSpec:
+            storage:
+              volumeClaimTemplate:
+                spec:
+                  storageClassName: synology-nfs
+                  accessModes: ["ReadWriteMany"]
+                  resources:
+                    requests:
+                      storage: 10Gi
+                  volumeName: synology-nfs-pv
+            volumeMounts:
+              - name: storage-volume
+                mountPath: /alertmanager
+                subPath: alertmanager
+            affinity:
+              nodeAffinity:
+                requiredDuringSchedulingIgnoredDuringExecution:
+                  nodeSelectorTerms:
+                    - matchExpressions:
+                        - key: workload-type/monitoring
+                          operator: In
+                          values:
+                            - "true"
+
+        prometheusOperator:
+          admissionWebhooks:
+            enabled: true
+          tlsProxy:
+            enabled: true
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: workload-type/monitoring
+                        operator: In
+                        values:
+                          - "true"
 
   destination:
     server: https://kubernetes.default.svc
