--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -11,7 +11,7 @@ spec:
     chart: kube-prometheus-stack
     helm:
       skipCrds: true
-      values:
+      values: |
         grafana:
           persistence:
             enabled: true
