--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -40,7 +40,8 @@ spec:
 
         prometheus:
           prometheusSpec:
-            storage:
+            retention: 30d
+            storageSpec:
               volumeClaimTemplate:
                 spec:
                   storageClassName: synology-prometheus
@@ -48,7 +49,6 @@ spec:
                   resources:
                     requests:
                       storage: 80Gi
-
             affinity:
               nodeAffinity:
                 requiredDuringSchedulingIgnoredDuringExecution:
