--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -38,6 +38,19 @@ spec:
               operator: Exists
               effect: NoSchedule
 
+          ingress:
+            enabled: true
+            ingressClassName: traefik
+            annotations:
+              cert-manager.io/cluster-issuer: "letsencrypt-staging"
+              traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
+            hosts:
+              - grafana.gitopsguy.com
+            tls:
+              - secretName: grafana-tls
+                hosts:
+                  - grafana.gitopsguy.com
+
         prometheus:
           prometheusSpec:
             retention: 30d
