changed ingress block for grafana

--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -44,12 +44,15 @@ spec:
             annotations:
               cert-manager.io/cluster-issuer: "letsencrypt-staging"
               traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
+            paths:
+              - /
             hosts:
               - grafana.gitopsguy.com
             tls:
               - secretName: grafana-tls
                 hosts:
                   - grafana.gitopsguy.com
+            pathType: Prefix
 
         prometheus:
           prometheusSpec:
