changed grafana to loadbalancer service type

--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -13,6 +13,8 @@ spec:
       skipCrds: true
       values: |
         grafana:
+          service:
+            type: LoadBalancer
           persistence:
             enabled: true
             storageClassName: synology-grafana
