add load balancer type to alertmanager and prometheus

--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -42,6 +42,8 @@ spec:
 
         prometheus:
           prometheusSpec:
+            service:
+            type: LoadBalancer
             retention: 30d
             storageSpec:
               volumeClaimTemplate:
@@ -63,6 +65,8 @@ spec:
 
         alertmanager:
           alertmanagerSpec:
+            service:
+            type: LoadBalancer
             storage:
               volumeClaimTemplate:
                 spec:
