--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -41,9 +41,9 @@ spec:
               effect: NoSchedule
 
         prometheus:
-          prometheusSpec:
-            service:
+          service:           # Move service to this level
             type: LoadBalancer
+          prometheusSpec:
             retention: 30d
             storageSpec:
               volumeClaimTemplate:
@@ -64,9 +64,9 @@ spec:
                             - "true"
 
         alertmanager:
-          alertmanagerSpec:
-            service:
+          service:           # Move service to this level
             type: LoadBalancer
+          alertmanagerSpec:
             storage:
               volumeClaimTemplate:
                 spec:
@@ -75,7 +75,6 @@ spec:
                   resources:
                     requests:
                       storage: 10Gi
-
             affinity:
               nodeAffinity:
                 requiredDuringSchedulingIgnoredDuringExecution:
