--- a/argocd/infra/apps/monitoring.yaml
+++ b/argocd/infra/apps/monitoring.yaml
@@ -100,6 +100,12 @@ spec:
                         values:
                           - "true"
 
+        prometheus-node-exporter:
+          service:
+            type: LoadBalancer
+            port: 9100
+            targetPort: 9100
+
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
