--- a/argocd/infra/apps/loki.yaml
+++ b/argocd/infra/apps/loki.yaml
@@ -16,8 +16,8 @@ spec:
     targetRevision: 6.27.0
     helm:
       values: |
-        loki:
-          auth_enabled: false
+        singleBinary:
+          replicas: 1
           affinity:
             nodeAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
@@ -30,15 +30,31 @@ spec:
                           - k3s-work-08
                           - k3s-work-12
                           - k3s-work-16
+            podAntiAffinity:
+              preferredDuringSchedulingIgnoredDuringExecution:
+                - weight: 100
+                  podAffinityTerm:
+                    labelSelector:
+                      matchExpressions:
+                        - key: app
+                          operator: In
+                          values:
+                            - loki
+                    topologyKey: kubernetes.io/hostname
+
+          persistence:
+            enabled: true
+            size: 10Gi
+            storageClass: synology-loki
+
+        loki:
+          auth_enabled: false
           commonConfig:
             replication_factor: 1
+            path_prefix: /var/loki
           storage:
             type: filesystem
-          storage_config:
-            filesystem:
-              chunks_directory: /data/loki/chunks
-              rules_directory: /data/loki/rules
-          schema_config:
+          schemaConfig:
             configs:
               - from: "2023-01-01"
                 store: boltdb-shipper
@@ -48,32 +64,21 @@ spec:
                   prefix: index_
                   period: 24h
           limits_config:
-            retention_period: 168h  # 7 days retention
-          ruler:
-            storage:
-              type: filesystem
-            rule_path: /data/loki/rules
+            retention_period: 168h
 
-        # Persistence configuration
-        persistence:
-          enabled: true
-          size: 10Gi
-          storageClass: synology-loki
+        monitoring:
+          serviceMonitor:
+            enabled: true
+            namespace: monitoring
+          selfMonitoring:
+            enabled: true
+            grafanaAgent:
+              installOperator: false
 
-        # Service configuration
         service:
           type: LoadBalancer
           port: 3100
 
-        # Ingress configuration (if needed)
-        ingress:
-          enabled: false
-
-        # Monitoring configuration
-        serviceMonitor:
-          enabled: true
-
-        # Network Policy
         networkPolicy:
           enabled: true
 
