--- a/argocd/infra/apps/loki.yaml
+++ b/argocd/infra/apps/loki.yaml
@@ -16,42 +16,41 @@ spec:
     targetRevision: 6.27.0
     helm:
       values: |
-        deploymentMode: "SingleBinary<->SimpleScalable"
+        loki:
+          auth_enabled: false
+          storage:
+            type: filesystem
+          schemaConfig:
+            configs:
+              - from: "2023-01-01"
+                store: boltdb-shipper
+                object_store: filesystem
+                schema: v12
+                index:
+                  prefix: index_
+                  period: 24h
+          storage_config:
+            boltdb_shipper:
+              active_index_directory: /var/loki/index
+              cache_location: /var/loki/cache
+              cache_ttl: 24h
+              shared_store: filesystem
+            filesystem:
+              directory: /var/loki/chunks
+          commonConfig:
+            path_prefix: /var/loki
+            replication_factor: 1
+          limits_config:
+            retention_period: 168h
 
         singleBinary:
           replicas: 1
+          nodeSelector:
+            kubernetes.io/hostname: k3s-work-04
           persistence:
             enabled: true
             size: 10Gi
             storageClass: synology-loki
-          nodeSelector:
-            kubernetes.io/hostname: k3s-work-04
-          resources:
-            requests:
-              cpu: 200m
-              memory: 256Mi
-            limits:
-              cpu: 1000m
-              memory: 1Gi
-
-        read:
-          replicas: 0
-          persistence:
-            enabled: false
-
-        write:
-          replicas: 0
-          persistence:
-            enabled: false
-
-        backend:
-          replicas: 0
-          persistence:
-            enabled: false
-
-        service:
-          type: LoadBalancer
-          port: 3100
 
         monitoring:
           serviceMonitor:
@@ -61,6 +60,10 @@ spec:
             enabled: true
             grafanaAgent:
               installOperator: false
+
+        service:
+          type: LoadBalancer
+          port: 3100
 
         networkPolicy:
           enabled: true
