--- a/argocd/infra/apps/loki.yaml
+++ b/argocd/infra/apps/loki.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: monitoring
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -11,62 +6,69 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://grafana.github.io/helm-charts
     chart: loki
-    targetRevision: 6.27.0
+    repoURL: https://grafana.github.io/helm-charts
+    targetRevision: 6.27.0 # Latest stable version as of February 2025
     helm:
       values: |
         loki:
           auth_enabled: false
+          commonConfig:
+            replication_factor: 1
           storage:
             type: filesystem
-          schemaConfig:
-            configs:
-              - from: "2023-01-01"
-                store: boltdb-shipper
-                object_store: filesystem
-                schema: v12
-                index:
-                  prefix: index_
-                  period: 24h
           storage_config:
-            boltdb_shipper:
-              active_index_directory: /var/loki/index
-              cache_location: /var/loki/cache
-              cache_ttl: 24h
-              shared_store: filesystem
             filesystem:
-              directory: /var/loki/chunks
-          commonConfig:
-            path_prefix: /var/loki
-            replication_factor: 1
-          limits_config:
-            retention_period: 168h
-
-        singleBinary:
-          replicas: 1
-          nodeSelector:
-            kubernetes.io/hostname: k3s-work-04
-          persistence:
-            enabled: true
-            size: 10Gi
-            storageClass: synology-loki
+              directory: /data/loki/chunks
+          ruler:
+            storage:
+              type: filesystem
+              filesystem:
+                directory: /data/loki/rules
+          compactor:
+            retention_enabled: true
+            working_directory: /data/loki/compactor
+            shared_store: filesystem
 
         monitoring:
-          serviceMonitor:
-            enabled: true
-            namespace: monitoring
           selfMonitoring:
             enabled: true
             grafanaAgent:
               installOperator: false
+          lokiCanary:
+            enabled: true
 
-        service:
-          type: LoadBalancer
-          port: 3100
-
-        networkPolicy:
+        persistence:
           enabled: true
+          storageClass: synology-loki
+          size: 50Gi
+          accessModes:
+            - ReadWriteOnce
+
+        serviceMonitor:
+          enabled: true
+
+        gateway:
+          enabled: true
+          replicas: 1
+
+        write:
+          persistence:
+            size: 10Gi
+            storageClass: synology-loki
+
+        read:
+          persistence:
+            size: 10Gi
+            storageClass: synology-loki
+
+        backend:
+          persistence:
+            size: 10Gi
+            storageClass: synology-loki
+
+        test:
+          enabled: false
 
   destination:
     server: https://kubernetes.default.svc
@@ -78,9 +80,8 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-    retry:
-      limit: 5
-      backoff:
-        duration: 5s
-        factor: 2
-        maxDuration: 3m
+      - ServerSideApply=true
+
+  # Health check configuration
+  health:
+    healthCheckTimeout: 180s
